# Document-Intelligence-Refinery

./: .gitignore  DOMAIN_NOTES.md  Dockerfile  IMPLEMENTATION_APPROACH.md  INTERIM_REPORT.md  Makefile  PROJECT_STRUCTURE.md  README.md  TRP1 Challenge Week 3_ The Document Intelligence Refinery.md  main.py  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.refinery/: extraction_ledger.jsonl  ldus_368309bc-6548-4f06-8fe9-3e5564bf8e8b.json  ldus_53f53353-6470-47c5-8d9e-3bb0b92d0c98.json  ldus_5ed2136c-d346-4153-9212-4441c08e1e99.json  ldus_6a100198-8c46-490d-9ca0-f87ffcf24b4e.json  ldus_a728514b-4070-45dc-981d-635101538a8f.json  ldus_a8b52bf4-80eb-4ccc-9524-c8f60f24ff7e.json  ldus_bb3759d9-9542-452a-857e-6eba46d81432.json  ldus_e3354877-be57-4ba6-b90a-686286fca0b0.json  pageindex_5a87acd7-5241-44e8-bba8-168f78189dd9.json  pageindex_bb686ab6-6bc4-4419-9360-454ec7d5644d.json  pageindex_e3354877-be57-4ba6-b90a-686286fca0b0.json
.refinery/profiles/: 02527f79-d077-469e-9391-cb95b1e5a150.json  08a299cd-1e64-49ad-95cc-617d4965aadf.json  0eabf430-44dd-4c46-be4d-ffbffcbb74de.json  2409f3e4-c0c1-4fb0-86fb-522b4dfb3f4c.json  (+56 more)
report/: comparision report for phase 0.md
research/: phase0_modular_analysis.py
rubric/: domain_keywords.yaml  extraction_rules.yaml
scripts/: clear_chromadb_collection.py  inspect_chroma.py  pdf_type_classifier.py
src/: main.py
tests/: manual_query_agent_test.py  test_chroma_ingest.py  test_extraction_ledger.py  test_fast_text_extractor.py  test_layout_extractor.py  test_triage.py  test_triage_confidence.py  test_vision_extractor.py
(+20 files in other folders)
