[project]
name = "refineryai-document-intelligence-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.5.2",
    "docling>=2.76.0",
    "google-genai>=1.66.0",
    "numpy>=2.4.2",
    "pdfplumber>=0.11.9",
    "pillow>=12.1.1",
    "psycopg2-binary>=2.9.11",
    "pymupdf>=1.27.1",
    "pytesseract>=0.3.13",
    "pytest>=9.0.2",
    "rapidfuzz>=3.14.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.2.3",
]
